--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "fec-style": "^1.10.0"
   },
   "devDependencies": {
-    "gulp-sass": "^2.2.0",
-    "load-grunt-tasks": "^3.4.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-sass": "^1.1.0",
-    "grunt": "^0.4.5"
+    "grunt-shell": "^1.3.0",
+    "gulp-sass": "^2.2.0",
+    "load-grunt-tasks": "^3.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified, use `python manage.py test` instead\" && exit 1"
